// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders remove from whitelist button correctly 1`] = `
<div
  className="ui attached segment"
>
  <button
    className="ui basic fluid negative button"
    onClick={[Function]}
    tabIndex={undefined}
  >
    Remove from whitelist
  </button>
</div>
`;

exports[`renders whitelist button correctly 1`] = `
<div
  className="ui attached segment"
>
  <button
    className="ui basic fluid positive button"
    onClick={[Function]}
    tabIndex={undefined}
  >
    Whitelist this site
  </button>
</div>
`;
